--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ captures/
 
 # Intellij
 *.iml
+.idea/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/libraries
@@ -46,9 +47,13 @@ captures/
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
 
-.gitignore
-app/libs/
-app/src/main/res/drawable/
-core/libs/
-core/src/main/java/
-core/src/main/res/drawable/
+#.gitignore
+#app/libs/
+#app/src/main/res/drawable/
+#core/libs/
+#core/src/main/java/
+#core/src/main/res/drawable/
+.idea/compiler.xml
+.idea/runConfigurations.xml
+.idea/vcs.xml
+.idea/copyright/profiles_settings.xml
